[tool.poetry]
name = "youtube-downloader"
version = "0.1.0"
description = ""
authors = ["Vyacheslav <danubise@gmail.com>"]
readme = "README.md"
packages = [{include = "youtube_downloader"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
